--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,9 @@
           <h2>
             Let’s start simple by building a
             <a href="http://motherfuckingwebsite.com/" target="_blank"
-              >mo’fuckin’ website</a> about you
+              >mo’fuckin’ website</a
+            >
+            about you
           </h2>
         </section>
         <section>
@@ -1670,9 +1672,38 @@
           <h2>
             Let’s make things pretty by building a
             <a href="http://bettermotherfuckingwebsite.com/" target="_blank"
-              >better mo’fuckin’ website</a> about you
-            
+              >better mo’fuckin’ website</a
+            >
+            about you
           </h2>
+        </section>
+        <section>
+          <section>
+            <h2>JavaScript</h2>
+            <a href="http://eloquentjavascript.net/" target="_blank">
+              <img
+                src="http://eloquentjavascript.net/img/cover.jpg"
+                height="500"
+              />
+            </a>
+          </section>
+          <section>
+            <h4>JavaScript Characteristics</h4>
+            <ul>
+              <li>
+                <strong>high-level</strong>, <strong>interpreted</strong>
+                <strong>scripting</strong> language
+              </li>
+              <li><strong>curly-bracket</strong> syntax (like C, Java...)</li>
+              <li><strong>dynamic typing</strong></li>
+              <li>prototype-based <strong>object orientation</strong></li>
+              <li><strong>first-class functions</strong></li>
+              <li>
+                <strong>multi-paradigm</strong>: event-driven, functional,
+                object-oriented
+              </li>
+            </ul>
+          </section>
         </section>
         <section>
           <section>
