--- a/index.html
+++ b/index.html
@@ -2126,6 +2126,61 @@
             ></script>
           </section>
         </section>
+        <section>
+          <section>
+            <h2>JavaScript Object Notation (JSON)</h2>
+            <ul>
+              <li>a lightweight data-interchange format,</li>
+              <li>easy for humans to read and write,</li>
+              <li>easy for machines to parse and generate and</li>
+              <li>completely language independent.</li>
+            </ul>
+          </section>
+          <section>
+            <h4>JSON is built on three structures:</h4>
+            <ul>
+              <li>
+                collection of name / value pairs
+                <small
+                  >(object, record, struct, dictionary, hash table, keyed list,
+                  associative array...)</small
+                >
+              </li>
+              <li>
+                ordered list of values
+                <small>(array, vector, list, sequence...)</small>
+              </li>
+              <li>primitives: string, number, boolean, null</li>
+            </ul>
+          </section>
+          <section>
+            <h4>JSON Example</h4>
+
+            <p
+              class="codepen"
+              data-height="500"
+              data-theme-id="0"
+              data-default-tab="js,result"
+              data-user="johakr"
+              data-slug-hash="oNvmbbB"
+              style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"
+              data-pen-title="JSON"
+            >
+              <span
+                >See the Pen
+                <a href="https://codepen.io/johakr/pen/oNvmbbB"> JSON</a> by
+                Johannes (<a href="https://codepen.io/johakr">@johakr</a>) on
+                <a href="https://codepen.io">CodePen</a>.</span
+              >
+            </p>
+            <script
+              async
+              src="https://static.codepen.io/assets/embed/ei.js"
+            ></script>
+          </section>
+        </section>
+        <section><h2>Promises</h2></section>
+        <section><h2>Fetch API</h2></section>
       </div>
     </div>
 
