--- a/index.html
+++ b/index.html
@@ -1258,18 +1258,10 @@
                 <td>Selects the first line of each <em>p</em> element</td>
               </tr>
               <tr>
-                <td>p::<mark>::selection</mark></td>
+                <td>p<mark>::selection</mark></td>
                 <td>
                   Selects the portion of an element that is selected by a user
                 </td>
-              </tr>
-              <tr>
-                <td><mark>:not(</mark>p<mark>)</mark></td>
-                <td>Selects every element that is not a <em>p</em> element</td>
-              </tr>
-              <tr>
-                <td>button<mark>:disabled</mark></td>
-                <td>Selects every disabled <em>button</em> element</td>
               </tr>
             </table>
           </section>
@@ -1549,6 +1541,28 @@
 								</pre
             >
           </section>
+          <section>
+              <h4>CSS Specificity (9 / 9) Solution</h4>
+              <pre>
+                  * { } (0, 0, 0, 0)
+                  li { } (0, 0, 0, 1)
+                  li:first-line (0, 0, 0, 2)
+                  ul li { } (0, 0, 0, 2)
+                  ul ol+li { } (0, 0, 0, 3)
+                  h1 + *[rel=up] { } (0, 0, 1, 1)
+                  ul ol li.red { } (0, 0, 1, 3)
+                  li.red.level {} (0, 0, 2, 1)
+                  style=“” (1, 0, 0, 0)
+                  p { } (0, 0, 0, 1)
+                  div p { } (0, 0, 0, 2)
+                  div, p { } (0, 0, 0, 1)
+                  .sith { } (0, 0, 1, 0)
+                  div p.sith { } (0, 0, 1, 2)
+                  #sith { } (0, 1, 0, 0)
+                  body #darkside .sith p { } (0, 1, 1, 2)
+                  </pre
+              >
+            </section>
           <section>
             <h4>CSS Specificity (8 / 9)</h4>
             <a href="https://specificity.keegan.st/" target="_blank"
