--- a/index.html
+++ b/index.html
@@ -1542,8 +1542,8 @@
             >
           </section>
           <section>
-              <h4>CSS Specificity (9 / 9) Solution</h4>
-              <pre>
+            <h4>CSS Specificity (9 / 9) Solution</h4>
+            <pre>
                   * { } (0, 0, 0, 0)
                   li { } (0, 0, 0, 1)
                   li:first-line (0, 0, 0, 2)
@@ -1561,8 +1561,8 @@
                   #sith { } (0, 1, 0, 0)
                   body #darkside .sith p { } (0, 1, 1, 2)
                   </pre
-              >
-            </section>
+            >
+          </section>
           <section>
             <h4>CSS Specificity (8 / 9)</h4>
             <a href="https://specificity.keegan.st/" target="_blank"
@@ -2182,16 +2182,24 @@
                   "hobbies": ["reading", "cooking"]
                 }
 					</code></pre>
-          <small><a href="https://jsoneditoronline.org/?id=3e0486e4b8084baca52572bff563aefa" target="_blank">https://jsoneditoronline.org/?id=3e0486e4b8084baca52572bff563aefa</a></small>
+            <small
+              ><a
+                href="https://jsoneditoronline.org/?id=3e0486e4b8084baca52572bff563aefa"
+                target="_blank"
+                >https://jsoneditoronline.org/?id=3e0486e4b8084baca52572bff563aefa</a
+              ></small
+            >
           </section>
           <section>
             <h4>JSON Schema</h4>
-            <p>JSON Schema is a vocabulary that allows you to 
-            <strong>annotate and validate JSON</strong> documents.</p>
+            <p>
+              JSON Schema is a vocabulary that allows you to
+              <strong>annotate and validate JSON</strong> documents.
+            </p>
           </section>
           <section>
-              <h4>JSON Schema Example</h4>
-              <pre><code data-trim data-line-numbers>
+            <h4>JSON Schema Example</h4>
+            <pre><code data-trim data-line-numbers>
                   {
                     "$schema": "http://json-schema.org/draft-07/schema#",
                     "type": "object",
@@ -2233,8 +2241,12 @@
                     ]
                   }
             </code></pre>
-            <small><a href="https://www.jsonschemavalidator.net/">https://www.jsonschemavalidator.net/</a></small>
-            </section>
+            <small
+              ><a href="https://www.jsonschemavalidator.net/"
+                >https://www.jsonschemavalidator.net/</a
+              ></small
+            >
+          </section>
         </section>
         <section><h2>Promises</h2></section>
         <section><h2>Fetch API</h2></section>
