--- a/index.html
+++ b/index.html
@@ -2200,6 +2200,7 @@
               JSON Schema is a vocabulary that allows you to
               <strong>annotate and validate JSON</strong> documents.
             </p>
+            <small><a href="https://json-schema.org/learn/miscellaneous-examples.html">https://json-schema.org/learn/miscellaneous-examples.html</a></small>
           </section>
           <section>
             <h4>JSON Schema Example</h4>
