--- a/examples/01-fizz-buzz/index.html
+++ b/examples/01-fizz-buzz/index.html
@@ -13,6 +13,7 @@
     <h2>Fizz Buzz!</h2>
     <pre id="log1"></pre>
     <pre id="log2"></pre>
+    <pre id="log3"></pre>
     <script src="index.js"></script>
   </body>
 </html>
