--- a/examples/03-fetch/index.html
+++ b/examples/03-fetch/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Example 03/title>
+    <title>Example 03</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <button id="fetchPeople">Fetch People</button>
+    <ul id="peoplelist"></ul>
+    <pre id="log"></pre>
     <script src="index.js"></script>
   </body>
 </html>
