--- a/examples/03-fetch/index.html
+++ b/examples/03-fetch/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <button id="fetchPeople">Fetch People</button>
+    <button id="fetchPeople">Fetch Todos</button>
     <ul id="peoplelist"></ul>
     <pre id="log"></pre>
     <script src="index.js"></script>
