--- a/index.html
+++ b/index.html
@@ -2476,7 +2476,7 @@
               exposed by a JSON API.<br />
               Parts of the DOM are created client-side by JavaScript
             </p>
-            <img src="/images/architecture-widgets.jpg" />
+            <img src="images/architecture-widgets.jpg" />
           </section>
           <section>
             <h4>Architecture III: Single Page Applications</h4>
@@ -2484,7 +2484,7 @@
               Server only provides data by JSON APIs.<br />
               DOM is completely composed on the client-side by JavaScript
             </p>
-            <img src="/images/architecture-spa.jpg" />
+            <img src="images/architecture-spa.jpg" />
           </section>
           <section>
             <h2>Web Frameworks</h2>
