--- a/index.html
+++ b/index.html
@@ -2615,7 +2615,11 @@
           </section>
           <section>
             <h4>ExpressJS: Routing</h4>
-            <p>Routing refers to determining how an application responds to a client request to a particular endpoint, which is a URI (or path) and a specific HTTP request method (GET, POST...).</p>
+            <p>
+              Routing refers to determining how an application responds to a
+              client request to a particular endpoint, which is a URI (or path)
+              and a specific HTTP request method (GET, POST...).
+            </p>
             <pre><code data-trim data-line-numbers>
               app.METHOD(PATH, HANDLER) 
             </code></pre>
